🏷️ Rename: rename MultiDisplay to MultiSizeDisplay

--- a/src/SwashbucklerDiary.Rcl/Components/AudioResourceCard/AudioResourceCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/AudioResourceCard/AudioResourceCardList.razor
@@ -31,10 +31,10 @@
              Text="@(I18n.T("No audio"))">
 </EmptyResult>
 
-<MultiMenu @bind-Visible="showMenu"
+<MultiSizeMenu @bind-Visible="showMenu"
            DynamicListItems="menuItems"
            ActivatorAttributes="menuActivatorAttributes"
            MenuOffsetX
            MenuNudgeLeft="52"
            MenuNudgeBottom="24">
-</MultiMenu>
+</MultiSizeMenu>
