--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
@@ -15,14 +15,14 @@
 
     @if (ShowStatisticsCard)
     {
-        <MultiDisplay MdAndUp="true">
+        <MultiSizeDisplay MdAndUp="true">
             <DesktopContent>
                 <div class="card-list__assist-info">
                     <LocationStatisticsCard Value="Value">
                     </LocationStatisticsCard>
                 </div>
             </DesktopContent>
-        </MultiDisplay>
+        </MultiSizeDisplay>
     }
 </div>
 
@@ -54,7 +54,7 @@
              ItemText="it => I18n.TForOrder(it)">
 </RadioDialog>
 
-<MultiMenu @bind-Visible="showMenu"
+<MultiSizeMenu @bind-Visible="showMenu"
            DynamicListItems="menuItems"
            ActivatorAttributes="menuActivatorAttributes">
-</MultiMenu>
+</MultiSizeMenu>
