--- a/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeListDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeListDialog.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MultiDisplay>
+<MultiSizeDisplay>
     <MobileContent>
         <CustomMBottomSheet MyValue="Visible"
                             MyValueChanged="InternalVisibleChanged"
@@ -85,4 +85,4 @@
             </MCard>
         </CustomMDialog>
     </DesktopContent>
-</MultiDisplay>
+</MultiSizeDisplay>
