--- a/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeMenu.razor
@@ -1,7 +1,7 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MultiDisplay OnUpdate="UpdateDisplay">
+<MultiSizeDisplay OnUpdate="UpdateDisplay">
     <MobileContent>
         <CustomMBottomSheet @ref="mBottomSheetExtension"
                             MyValue="Visible"
@@ -81,4 +81,4 @@
             </ChildContent>
         </MMenu>
     </DesktopContent>
-</MultiDisplay>
+</MultiSizeDisplay>
