--- a/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeSearch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeSearch.razor
@@ -1,6 +1,6 @@
 @namespace SwashbucklerDiary.Rcl.Components
 
-<MultiDisplay MdAndUp="true">
+<MultiSizeDisplay MdAndUp="true">
     <MobileContent>
         <MButton Large="true"
                  Icon="true"
@@ -23,4 +23,4 @@
                     OnEnter="Search">
         </MTextField>
     </DesktopContent>
-</MultiDisplay>
+</MultiSizeDisplay>
