--- a/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
@@ -18,7 +18,7 @@
     </div>
     @if (ShowStatisticsCard)
     {
-        <MultiDisplay MdAndUp="true">
+        <MultiSizeDisplay MdAndUp="true">
             <DesktopContent>
                 <div class="card-list__assist-info">
                     <TagStatisticsCard Value="Value"
@@ -26,7 +26,7 @@
                     </TagStatisticsCard>
                 </div>
             </DesktopContent>
-        </MultiDisplay>
+        </MultiSizeDisplay>
     }
 </div>
 
@@ -62,7 +62,7 @@
              ItemText="it => I18n.TForOrder(it)">
 </RadioDialog>
 
-<MultiMenu @bind-Visible="showMenu"
+<MultiSizeMenu @bind-Visible="showMenu"
            DynamicListItems="menuItems"
            ActivatorAttributes="menuActivatorAttributes">
-</MultiMenu>
+</MultiSizeMenu>
