--- a/src/SwashbucklerDiary.Rcl/Components/Waterfall/ImageWaterfall/ImageWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Waterfall/ImageWaterfall/ImageWaterfall.razor
@@ -35,10 +35,10 @@
                     Src="@previewImageSrc">
 </PreviewImageDialog>
 
-<MultiMenu @bind-Visible="showMenu"
+<MultiSizeMenu @bind-Visible="showMenu"
            DynamicListItems="menuItems"
            ActivatorAttributes="menuActivatorAttributes"
            MenuOffsetX
            MenuNudgeLeft="52"
            MenuNudgeBottom="24">
-</MultiMenu>
+</MultiSizeMenu>
