--- a/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
@@ -32,22 +32,22 @@
         <MIcon>event_repeat</MIcon>
     </MButton>
 
-    <MultiMenu @bind-Visible="showMenu"
+    <MultiSizeMenu @bind-Visible="showMenu"
                DynamicListItems="menuItems">
         <ActivatorContent>
             <MButton @attributes="@context.Attrs"
                      Icon="true">
-                <MultiDisplay>
+                <MultiSizeDisplay>
                     <DesktopContent>
                         <MIcon>more_horiz</MIcon>
                     </DesktopContent>
                     <MobileContent>
                         <MIcon>more_vert</MIcon>
                     </MobileContent>
-                </MultiDisplay>
+                </MultiSizeDisplay>
             </MButton>
         </ActivatorContent>
-    </MultiMenu>
+    </MultiSizeMenu>
 </MyAppBar>
 
 <ScrollContainer Id="@scrollContainerId">
