--- a/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
@@ -9,7 +9,7 @@
 
     <MSpacer></MSpacer>
 
-    <MultiSearch OnSearch="Search"></MultiSearch>
+    <MultiSizeSearch OnSearch="Search"></MultiSizeSearch>
 </MyAppBar>
 
 <SwiperTabItems @ref="swiperTabItems"
