--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -81,9 +81,9 @@
 
 </ScrollContainer>
 
-<MultiListDialog @bind-Visible="showSourceCode"
+<MultiSizeListDialog @bind-Visible="showSourceCode"
                  Title="@(I18n.T("View source"))"
                  DynamicListItems="codeSourceListItems">
-</MultiListDialog>
+</MultiSizeListDialog>
 
 <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
