--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/LogPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/LogPage.razor
@@ -36,22 +36,22 @@
         </MIcon>
     </MButton>
 
-    <MultiMenu @bind-Visible="showMenu"
+    <MultiSizeMenu @bind-Visible="showMenu"
                DynamicListItems="menuItems">
         <ActivatorContent>
             <MButton @attributes="@context.Attrs"
                      Icon="true">
-                <MultiDisplay>
+                <MultiSizeDisplay>
                     <DesktopContent>
                         <MIcon>more_horiz</MIcon>
                     </DesktopContent>
                     <MobileContent>
                         <MIcon>more_vert</MIcon>
                     </MobileContent>
-                </MultiDisplay>
+                </MultiSizeDisplay>
             </MButton>
         </ActivatorContent>
-    </MultiMenu>
+    </MultiSizeMenu>
 </MyAppBar>
 
 <ScrollContainer>
@@ -90,7 +90,7 @@
               OnOK="HandleDelete">
 </DeleteDialog>
 
-<MultiListDialog @bind-Visible="showShare"
+<MultiSizeListDialog @bind-Visible="showShare"
                  Title="@(I18n.T("Choose how to Share"))"
                  DynamicListItems="shareItems">
-</MultiListDialog>
+</MultiSizeListDialog>
