--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ExportDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ExportDialog.razor
@@ -1,8 +1,8 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits DialogComponentBase
 
-<MultiListDialog Visible="Visible"
+<MultiSizeListDialog Visible="Visible"
                  VisibleChanged="InternalVisibleChanged"
                  Title="@(I18n.T("Select the export file format"))"
                  DynamicListItems="items">
-</MultiListDialog>
+</MultiSizeListDialog>
