♻️ refactor(MultiSizeDatePicker): Selectable range is now +-100 years

--- a/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeDatePicker.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeDatePicker.razor
@@ -7,8 +7,8 @@
                                  MyVisibleChanged="InternalVisibleChanged"
                                  Value="Value"
                                  ValueChanged="InternalValueChanged"
-                                 Min="MobileMin"
-                                 Max="MobileMax">
+                                 Min="mobileMin"
+                                 Max="mobileMax">
         </CustomPMobileDatePicker>
     </MobileContent>
     <DesktopContent>
@@ -16,8 +16,8 @@
                           VisibleChanged="InternalVisibleChanged"
                           Value="Value"
                           ValueChanged="InternalValueChanged"
-                          Min="DesktopMin"
-                          Max="DesktopMax">
+                          Min="desktopMin"
+                          Max="desktopMax">
         </DatePickerDialog>
     </DesktopContent>
 </MultiSizeDisplay>
