♻️ refactor: add outline fab on mobile

--- a/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
@@ -1,16 +1,20 @@
 @namespace SwashbucklerDiary.Rcl.Components
 
-<MButton @ref="mButton"
-         @attributes="@Attributes"
-         Class="@InternalClass"
-         Elevation="@Elevation"
-         Width="Size"
-         Height="Size"
-         Show="Show"
-         Fab
-         Large="Desktop"
-         OnClick="OnClick">
-    <MIcon>
-        @Icon
-    </MIcon>
-</MButton>
+<ExpandTransition>
+    <MSheet Style="background-color:transparent;"
+            Show="Show">
+        <MButton @ref="mButton"
+                 @attributes="@Attributes"
+                 Class="@InternalClass"
+                 Elevation="@Elevation"
+                 Width="Size"
+                 Height="Size"
+                 Fab
+                 Large="Desktop"
+                 OnClick="OnClick">
+            <MIcon>
+                @Icon
+            </MIcon>
+        </MButton>
+    </MSheet>
+</ExpandTransition>
