--- a/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
@@ -72,9 +72,9 @@
 </ScrollContainer>
 
 <div class="right-bottom-float-area">
-    <BackTopButton Class="mb-2"
-                   Selector="@scrollContainerSelector">
+    <BackTopButton Selector="@scrollContainerSelector">
     </BackTopButton>
+
     <MyFloatButton Icon="mdi:mdi-pencil"
                    OnClick="ToWrite">
     </MyFloatButton>
