--- a/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
@@ -48,8 +48,7 @@
 </SwiperTabItems>
 
 <div class="right-bottom-float-area">
-    <BackTopButton Class="mb-2"
-                   Selector="@SwiperActiveItemSelector">
+    <BackTopButton Selector="@SwiperActiveItemSelector">
     </BackTopButton>
     <MWindow Value="tab" Style="overflow:unset;" Touchless>
         <MWindowItem Transition="">
