--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -171,6 +171,13 @@
     </ScrollContainer>
 </div>
 
+<div class="right-bottom-float-area">
+    <MyFloatButton Icon="format_list_bulleted"
+                   Show="!BreakpointService.Breakpoint.MdAndUp && enableMarkdown && outline"
+                   OnClick="()=>showMoblieOutline=true">
+    </MyFloatButton>
+</div>
+
 <SelectTemplateDialog @bind-Visible="showTemplate"
                       @bind-Tags="tags"
                       ExcludeItem="diary"
