🐛 fix: Markdown outline node click

--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
@@ -9,7 +9,8 @@
                        Options="_options"
                        Outline="Outline"
                        RightOutline="RightOutline"
-                       OnAfter="HandleOnAfter">
+                       OnAfter="HandleOnAfter"
+                       OnDblClick="OnDblClick">
 </VditorMarkdownPreview>
 
 <PreviewImageDialog @bind-Visible="showPreviewImage"
