--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
@@ -7,7 +7,7 @@
         <div @ref="outlineElementRef" class="@InternalOutlineClass" style="@InternalOutlineStyle "></div>
     }
 
-    <div @ref="Ref" class="@Class" style="@InternalStyle"></div>
+    <div @ref="Ref" class="@Class" style="@InternalStyle" @ondblclick="OnDblClick"></div>
 </div>
 
 @code {
