🐛 fix: Local audio and video load fail on Linux. Update meida load method on MAUI

--- a/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
+++ b/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
@@ -90,7 +90,7 @@ body {
 }
 
 .md-preview__outline {
-    height: calc(var(--safe-area-height) - 64px - 20px - 24px - 8px);
+    height: calc(var(--safe-area-height) - 64px - 32px - 28px - 22px - 60px);
 }
 
 .m-menu__content {
