--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -33,7 +33,7 @@
 
     <div class="preview-image-dialog__image__wraper">
         <div @ref="elementReference" class="preview-image-dialog__image">
-            <img src="@Src" />
+            <img src="@mediaResourcePath?.DisPlayedUrl" />
         </div>
     </div>
 </CustomMDialog>
