--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryStatisticsCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryStatisticsCard.razor
@@ -28,11 +28,7 @@
         <MListItemContent>
             <wc-auto-scroll-text>
                 <span>
-                    @(I18n.T("Most weather")):
-                    <MIcon Class="mx-1" Size="20">
-                        @(MostWeatherIcon)
-                    </MIcon>
-                    @(MostWeatherText)
+                    @(I18n.T("Most weather")): @(MostWeatherText)
                 </span>
             </wc-auto-scroll-text>
         </MListItemContent>
@@ -41,11 +37,7 @@
         <MListItemContent>
             <wc-auto-scroll-text>
                 <span>
-                    @(I18n.T("Most mood")):
-                    <MIcon Class="mx-1" Size="20">
-                        @(MostMoodIcon)
-                    </MIcon>
-                    @(MostMoodText)
+                    @(I18n.T("Most mood")): @(MostMoodText)
                 </span>
             </wc-auto-scroll-text>
         </MListItemContent>
