--- a/src/SwashbucklerDiary.Rcl/Components/Waterfall/VideoWaterfall/VideoResourceCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Waterfall/VideoWaterfall/VideoResourceCard.razor
@@ -1,5 +1,5 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits CardComponentBase<ResourceModel>
+@namespace SwashbucklerDiary.Rcl.Components
+@inherits MediaResourceComponentBase
 
 <video @oncontextmenu="OpenMenu"
        @oncontextmenu:preventDefault="true"
