--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -25,7 +25,7 @@
                 <MListItemAction>
                     <MAvatar Rounded="@("lg")"
                              Size="32">
-                        <img class="user-avatar" src="@avatar" />
+                        <img class="user-avatar" src="@avatarResourceInfo?.DisPlayedUrl" />
                     </MAvatar>
                     <MIcon>chevron_right</MIcon>
                 </MListItemAction>
