--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -72,8 +72,8 @@
 }
 
 .vditor-outline {
-    margin-bottom: 8px;
     padding-top: 8px;
+    padding-bottom: 8px;
     background-color: initial;
 }
 
