--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -21,7 +21,7 @@
                     <MListItemAvatar Class="ml-sm-2 ml-md-4 mr-md-6"
                                      Rounded="@("lg")"
                                      Size="70">
-                        <img class="user-avatar" src="@(avatar)" @onclick="() => showPreviewImage = true" @onclick:stopPropagation="true" />
+                        <img class="user-avatar" src="@(avatarResourceInfo?.DisPlayedUrl)" @onclick="() => showPreviewImage = true" @onclick:stopPropagation="true" />
                     </MListItemAvatar>
                     <MListItemContent>
                         <MListItemTitle Class="text-h6 font-weight-bold">
@@ -204,7 +204,7 @@
 </MultiSizeListDialog>
 
 <PreviewImageDialog @bind-Visible="showPreviewImage"
-                    Src="@avatar">
+                    Src="@avatarResourceInfo?.Url">
 </PreviewImageDialog>
 
 @if (!hidePrivacyModeEntrance || privacyMode)
